--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,13 @@ knitr::opts_chunk$set(
 According to the APPA (American Pet Product Association) 2019-2020 pet owner survey, around 84.9 million U.S. households own pet, which is about 67% of the U.S. homes (APPA, 2019). In 2018, the U.S. customer spent 72.56 billion dollars on their pets, of which 30.32 billion dollars is for pet food. From a 2017 U.S. pet owners survey, 2% of dog and cat owners select their pet food based on product claim of sustainable or eco-friendly pet food formula. Although the percentage is low, the interest in the sustainability of the pet food has grown a lot recently. 
 
 # Interesting question
-What is the scientitifc goal? What would you do if you had all the data? What do you want to predict or estimate? Why is this relevant to ABE researchers or the field? Provide some background on the rationale and relevance.
+
+The goal of this project is to study the environmental impact of a certain amount of production with Economic Input-Output Life Cycle Assessment (EIO-LCA) method, which estimates activities in our economy in the materials and energy resources required for and the environmental impact resulting from. The environmental impacts involove conventional air poluten (CAP), greenhouse gass (GHG), and toix release (TOX). Cradle-to-grave is the full Life Cycle Assessment from resource extraction to use phase and disposal phase. Specificallym, this analysis is base on the Cradle-to-grave EIO-LCA result to further understand how all industrial stages of producing Million Dollars product *in Dog and Cat Food Manufacturing* (code 311111 in NAICS 2002) are different in environmental impact. The study aim to answer the following questions:
+
+1.  which industry(s) have larger impact among all industries?
+2.  what are the relationship between some impact relative to the input (i.e. Energy, water withdraw)?
+3.  how the outlier industry(s) behave in linear regression models
+
 
 # Hightlight of result
 
@@ -96,20 +102,110 @@ ys <- cbind(CPA, GHG, TOX)
 psych::describe(ys) %>% knitr::kable(format = "markdown") 
 ```
 
+## Correlation
+
+Observation from correlation plot
+
+* The scatter plots show most information are concentrate at the origin of the feature space, but sparse anywhere else (heteroskedastic);
+* The distribution plots show variables are highly skewed (not normally distributed);
+* The spearman correlations show that most independent variables are moderate correlative, but some are unlikly and some are likly correlative (multicollinearity).
+
 ```{r corplot}
 # raw X variable
-psych::pairs.panels(resource, 
-                    method = "spearman")
-# Ln X variable
-psych::pairs.panels(log(resource+1), 
-                    method = "spearman")
+psych::pairs.panels(resource, method = "spearman")
 ```
 
-Let's take CO2 Equvivalent as the target variable, resource as input variables as example for visulization (click [Here](https://weiquanluo.github.io/img/plotly_GHG_TotalCO2.html)).
+The data is suitable for log transformation and could be modelled in LogLog transformation. 
+
+con
+
+* the interpretation of each parameter distorted from scalar to ratio of the scalar quantity (i.e. For regressions, the coefficent is interpret as the reletive change, in clusterings, the cluster is the group of same magnitude).
+* it is not able to fix the issue of multicollinearity, so variable/model selection are required.
+
+pro
+
+* the information at the origin can be stretched out.  
+* the resulting linear regression can be interpreted at elastisity (similar to the idea cobb-douglas utility function in Econometrics)
+
+```{r corplot_LN}
+# Ln X variable
+psych::pairs.panels(log(resource+1), method = "spearman")
+```
+
+
+```{r GHG_TotalCO2, eval=FALSE, include=FALSE}
+# Define the number of colors you want
+nb.cols <- dat$Sector %>% unique() %>% length()
+mycolors <- colorRampPalette(brewer.pal(8, "Set2"))(nb.cols)
+
+# calculate with formula only
+calculate_formula <- function(data, formula = y~1000*x){
+  as.function <- function(formula) {
+    cmd <- tail(as.character(formula),1)
+    exp <- parse(text=cmd)
+    function(...) eval(exp, list(...))
+  }
+  formula.function <- as.function(formula)
+  result<- formula.function(x=data)
+  return(result)
+}
+
+X <- resource %>% 
+  select(Coal.MJ, Petrol.MJ, NatGase.MJ) %>% 
+  mutate_all(calculate_formula, formula = y~x+1)
+y <- GHG %>% select(Total.g.CO2e)
+dat_GHG_TotalCO2 <- cbind(ID, y, X)
+
+p <- plot_ly(dat_GHG_TotalCO2, 
+             x = ~Coal.MJ, 
+             y = ~Petrol.MJ, 
+             z = ~NatGase.MJ,
+             hovertemplate = paste('<b>%{text}</b>',
+                                   '<br>Coal.MJ: %{x}',
+                                   '<br>Petrol.MJ: %{y}',
+                                   '<br>atGase.MJ: %{z}'),
+             color = ~Sector, 
+             colors = mycolors,
+             marker = list(symbol = 'circle',
+                           sizemode = 'diameter'),
+             size = ~Total.g.CO2e,
+             sizes = c(5,150),
+             text = ~paste('<br>Sector:', Sector, 
+                           '<br>Description:', Description, 
+                           '<br>Sector_sub:', Sector_sub, 
+                           '<br>name_sub:', name_sub,
+                           '<br>Total.g.CO2e:', Total.g.CO2e)) %>%
+  layout(title = 'Total CO2 equivalent vs Energy source (Coal, Petrol, NatGase) <br> by NAICS 2002 Sectors',
+         scene = list(xaxis = list(title = 'Coal.MJ',
+                                   gridcolor = 'rgb(255, 255, 255)',
+                                   type = 'log'),
+                      yaxis = list(title = 'Petrol.MJ',
+                                   gridcolor = 'rgb(255, 255, 255)',
+                                   type = 'log'),
+                      zaxis = list(title = 'NatGase.MJ',
+                                   gridcolor = 'rgb(255, 255, 255)',
+                                   type = 'log')),
+         paper_bgcolor = 'rgb(243, 243, 243)',
+         plot_bgcolor = 'rgb(243, 243, 243)',
+         annotations = list(x = 1.07,
+                            y = 1.015,
+                            text = 'Sector by NAICS 2002',
+                            showarrow = FALSE)); p
+```
+
+
+```{r plotly_GHG_TotalCO2, eval=FALSE, include=FALSE}
+htmlwidgets::saveWidget(ggplotly(p),
+                        file ="plotly_GHG_TotalCO2.html")
+```
+
+After the log transformation, let's take a look at the visulization of a 5-dimemtional plot: Total CO2 Equvivalent as the target variable by Sectors, three resources as input variables as example (click [Here](https://weiquanluo.github.io/img/plotly_GHG_TotalCO2.html)).
 
 # Regression
 
-## user-define function
+We are going to natural log transform both X and Y and fit regression models to each of 20 environmental impact variables. The six input resouce vairables consist of Coal.MJ, NatGase.MJ, Petrol.MJ, Bio.Waste.MJ, NonFossElec.MJ, and Water.Withdrawals.Kgal. The environmental impact variables are 7 variables for conventional air polutant, 5 variables for greenhouse gases, 8 variables for Toxic. Druding the data processing, if the count of datapoint for a target variable is less than 100, then we abandon the corresponding models. After data processing and stepwise model selections, it result 16 model candidates, where one for each valid target variable. The following user-defined function are prepared for functional programming with using purrr style lamda function.
+
+## User-defined Functions
 ```{r udfunc}
 # test: target_nm = "CO.g",  X = resource
 makedata_map <- function(target_nm, dat, X){
@@ -152,7 +248,7 @@ waldtest_map <- function(model, null= NULL){
 }
 ```
 
-## Ln-Ln Linear Regression
+## LogLog Linear Regression
 
 ```{r glm_fit}
 # create a dataframe with a column with impact variable names 
@@ -223,20 +319,20 @@ good_lm <- bestglm_list %>% filter(adj.r.squared >0.75)
 good_lm %>% arrange(desc(adj.r.squared)) %>% select(target) %>% flatten() %>% unlist
 ```
 
-## diagnosis for GHG CO2 Equvivalent model:
+## Diagnosis for GHG CO2 Equvivalent model:
 
 ```{r diagsis}
 par(mfrow=c(2,3))
 plot(good_lm$best_model[[2]], which=1:6)
 ```
 
-## partial-residual plots
+## Partial-residual plots
 
 ```{r prplot}
 car::crPlots(bestglm_list$best_model[[2]])
 ```
 
-## Randome Effect: Impact among Sectors
+## Random effect: Impact among sectors
 
 ```{r}
 # CO2.Fossil.t.CO2e	C: Emissions of Carbon Dioxide (CO2) into the air from each sector from fossil fuel combustion sources. t CO2e = metric tons of CO2 equivalent.
@@ -247,13 +343,13 @@ plot(good_lm$data[[i]][,1], good_lm$data[[i]][,ncol(good_lm$data[[i]])])
 ```
 
 ```{r}
-# random effect
+# random effect model
 data_anv <- good_lm$data[[2]] %>% select(-Description,-name_sub, -Sector_sub)
 model.rand_block <- nlme::lme(data = data_anv,
                      LnTotalgCO2e ~ LnBioWasteMJ + LnCoalMJ + LnNatGaseMJ + LnNonFossElecMJ + LnPetrolMJ,
                      random = ~1|Sector)
 # anova(model.rand_block)
-# fixed effects in the model
+# fixed effect model
 model.fixed = nlme::gls(data = data_anv,
                   LnTotalgCO2e ~ LnBioWasteMJ + LnCoalMJ + LnNatGaseMJ + LnNonFossElecMJ + LnPetrolMJ,
                   method="REML")
@@ -266,7 +362,7 @@ The extremely small p-value in testing random effect suggest that there are sign
 
 # Clustering for CO2 Equvivalent
 
-For instance, we are interested in what is the outlier of the industries to produce CO2 Equvivalent. A DBSCANS algorithm is to cluster the industries. The clearn data for CO2 Equvivalent is obtained from the `bestglm_list` object above.
+For instance, we are interested in what the outlier industries in producing CO2 Equvivalent. In general, we need to be extremely careful to rescaling data for distance based modeling that is sensitive to the distance between datapoints. From the above analysis, we understand this data is suitable in log scale. With considerations, we maintain the log transformation in the following distance based modeling, for reason of consistency and explanatory power. At this section, we are going to cluster the the relative size (or magnitude) of Greenhouse gases CO2 Equvivalent among all industries, instead of the scalar quantity. We used a DBSCANS algorithm to cluster the industries with magnitude of green house gases CO2 equivalence and the magnitude of the six input sources variable. The clearn log-transformed data of fitting CO2 Equvivalent linear regression is obtained from the `bestglm_list` object above. Then, we feed this log-transformed data to the cluster algorithm in python.
 
 ```{r dat_ghg}
 # input data to clustering using python
@@ -275,8 +371,6 @@ dat_ghg_total_co2e <- dat_ghg_total_co2e[[1]][[1]]
 dat_ghg <- dat_ghg_total_co2e[,-c(1:4)]
 dat_ghg %>% head %>% knitr::kable(format = "markdown") 
 ```
-
-We feed the data fitting linear regression model for CO2 Equvivalent to the cluster algorithm in python
 
 ```{r use_python}
 # use python3 engine
@@ -303,7 +397,7 @@ dat_ghg = r.dat_ghg
 dat_ghg1 = dat_ghg.iloc[:,1:]
 ```
 
-## dendrogram
+## Dendrogram
 ```{python dendrogram}
 # dendrogram
 Z = linkage(dat_ghg1, method='ward')
@@ -324,7 +418,6 @@ for i in np.arange(0.01, 5, 0.01):
     b = collections.Counter(a).get(-1)
     count.append(b)
 plt.plot(pd.Series(np.arange(0.01, 5, 0.01)),count)
-print(count)
 ```
 
 ## DBSCAN at eps = 4
@@ -334,7 +427,7 @@ Cluster_ghg = DBSCAN(eps=4).fit(dat_ghg1)
 cluster_labels = Cluster_ghg.labels_
 ```
 
-## check result
+## Visualize clusters
 
 ```{r cluster_point_plot}
 dat_ghg_total_co2e$Sector <- dat_ghg_total_co2e$Description
@@ -354,6 +447,17 @@ htmlwidgets::saveWidget(ggplotly(p),
 ```
 
 (click [HERE](https://weiquanluo.github.io/img/ghg_total_co2e_cluster.html) for interactive plot)
+
+# Discussion
+
+# Final Note
+
+The challenges of this project:
+
+* Manage data multicollinearity, heteroskedastic, highly right skewed.
+* Piping data processing, functional programming, statistic extraction
+* Communication between data processing in R and machine learning in python
+
 
 # Exercise
 
