add added-variable plot & partial-residual plot

--- a/README.Rmd
+++ b/README.Rmd
@@ -321,16 +321,29 @@ good_lm %>% arrange(desc(adj.r.squared)) %>% select(target) %>% flatten() %>% un
 
 ## Diagnosis for GHG CO2 Equvivalent model:
 
-Here is the explanation of the `Total.t.CO2e`:
+The variable `Total.t.CO2e` refer to the Global Warming Potential (GWP), which is a weighting of greenhouse gas emissions into the air from the production of each sector. Weighting factors are 100-year GWP values from the IPCC Second Assessment Report (IPCC 2001). t CO2e = metric tons of CO2 equivalent emissions. For the resulting regression model, We see some issue from the diagnosis plot:
 
-  Global Warming Potential (GWP) is a weighting of greenhouse gas emissions into the air from the production of each sector. Weighting factors are 100-year GWP values from the IPCC Second Assessment Report (IPCC 2001). t CO2e = metric tons of CO2 equivalent emissions.
+* linearity: there some pattern in the residual plot, so it suggest some other transformation. The linearity assumption seems to be violated, so some further transformation is required.
+* normality: the quantile plot show that the residual are not normally distribute at the tail section, which suggest some influential points, but is the least concern because we have sufficient sample size.
+* Constant variance: Scale-lacation plot show a increasing variance. It suggests that we can use this regression to interpret the relationship between x and y, but not to make prediction, because the confident interval increase as the predictive value increase.
 
 ```{r diagsis}
 par(mfrow=c(2,3))
 plot(good_lm$best_model[[2]], which=1:6)
 ```
 
-## Partial-residual plots
+### Added-variable plots 
+
+We use added-variable plots for influence analysis to check the existance of any influential points. We can see some points are considered to be influential points, such as 1, 37, 39 66, 78, 331, 318.
+
+```{r avplot}
+car::avPlots(bestglm_list$best_model[[2]])
+```
+
+
+### Partial-residual plots
+
+we use partial-residual plots to reveal nonlinearity. All partial-residual plots did not show a obvious curve pattern, but we might keep the eyes on leaakge effect by `LnNonFossElecMJ` and `LnBioWasteMJ`. 
 
 ```{r prplot}
 car::crPlots(bestglm_list$best_model[[2]])
@@ -361,7 +374,11 @@ model.fixed = nlme::gls(data = data_anv,
 anova(model.rand_block, model.fixed)
 ```
 
-The extremely small p-value in testing random effect suggest that there are significant difference in green house gases CO2 equivalence among sectors.
+The extremely small p-value in testing random effect suggest that there are significant difference in green house gases CO2 equivalence among sectors. However, random effect model are usually has less mse than fixed effect model.
+
+## Interaction effect
+
+The concern of variable interaction effect (effect modification) have not been tested for the regression. The best practise is to exam the interaction effect during model selection stage. So future research is required. 
 
 # Clustering for CO2 Equvivalent
 
