--- a/README.Rmd
+++ b/README.Rmd
@@ -31,10 +31,9 @@ The goal of this project is to study the environmental impact of a certain amoun
 
 # Hightlight of result
 
-* by increasing pet food production by 1%, most environmental impacts increase by more than 1%, but toxic increase by less than 1% on average.
+* on average, by increasing pet food production by 1%, most environmental impacts increase by more than 1%, but toxic increase by less than 1%
 * in pet food manufacturing, the greatest environmental impacts come from agricultural farming sector, and the utility sector of Electric Power Generation, Transmission and Distribution.
 * the industries using biowaste energy have higher impact in toxic.
-
 
 # Data description
 The dataset for this project is the first pass life cycle assessment results for cat and dog food manufacturing. It provides the environmental impact information into the pet food supply chain. The LCA data was generated through EIO-LCA website(http://www.eiolca.net/cgi-bin/dft/use.pl).  The model for getting the LCA data is US 2002 producer price benchmark. In order to get the dog and cat food manufacturing LCA data, the user needs to select “Food beverage and tobacco” sector group, dog and cat food manufacturing sector and then the amount of economic activity for this sector(e.g. 1 millon dollars). After setting up the sector and economic parameters, The user could select different economical and environmental impact to get the LCA results.
