--- a/README.Rmd
+++ b/README.Rmd
@@ -116,7 +116,7 @@ The data is suitable for log transformation and could be modelled in LogLog tran
 
 con
 
-* the interpretation of each parameter distorted from scalar to ratio of the scalar quantity (i.e. For regressions, the coefficent is interpret as the reletive change, in clusterings, the cluster is the group of same magnitude).
+* the interpretation of each parameter distorted from scalar to ratio of the scalar quantity (i.e. For regressions, the coefficent is interpret as the reletive change, in clusterings, the cluster is the group of similar magnitude).
 * it is not able to fix the issue of multicollinearity, so variable/model selection are required.
 
 pro
@@ -491,4 +491,4 @@ The challenges of this project:
 
 # Exercise
 
-Please, click [HERE]("Class Exercise.ipynb") to Exercise.
+Please, click [HERE](https://github.com/WeiquanLuo/LCA-PetFoodSupplyChain/code_Exercise.ipynb) to Exercise.
