--- a/README.Rmd
+++ b/README.Rmd
@@ -480,6 +480,8 @@ Let's take a look at the visulization of plot with 5-dimemtions: Total CO2 Equvi
 
 # Final Note
 
+Our first pass analysis gives a general idea of the dog and cat manufactory life cycle. by clustering, we are able to identify the outlier industries. by doing regression, we are able to identify the influent industries. Combining the results, we have an overview of how the dog and cat manufactory life cycle affects the environmental impact.
+
 The challenges of this project:
 
 * Manage data multicollinearity, heteroskedastic, highly right skewed.
